src/objects/BFM_Occurrence__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Date_1__c</fullName>
        <label>Approval Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Date_2__c</fullName>
        <label>Approval Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Date_3__c</fullName>
        <label>Approval Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Carrier_2__c</fullName>
        <label>Carrier 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Account__c</fullName>
        <label>Carrier Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Occurrences</relationshipLabel>
        <relationshipName>Occurrences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <label>CreatedBy</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_date__c</fullName>
        <label>Created date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equip_Type__c</fullName>
        <label>Equip. Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equip_Type_description__c</fullName>
        <label>Equip. Type description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Documents__c</fullName>
        <label>Fiscal Documents</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Type_Description__c</fullName>
        <label>Load Type Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Type__c</fullName>
        <label>Load Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occurrence_Code__c</fullName>
        <label>Occurrence Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occurrence_Description__c</fullName>
        <label>Occurrence Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occurrence_Number__c</fullName>
        <externalId>true</externalId>
        <label>Occurrence Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occurrence_Quantity__c</fullName>
        <label>Occurrence Quantity</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occurrence_Value__c</fullName>
        <label>Occurrence Value</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occurrence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Occurrence</label>
        <referenceTo>BFM_Occurrence__c</referenceTo>
        <relationshipName>Occurrences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plate_Number__c</fullName>
        <label>Plate Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_of_Extent_of_Occurrence_From__c</fullName>
        <label>Range of Extent of Occurrence (From)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Range_of_Extent_of_Occurrence_To__c</fullName>
        <label>Range of Extent of Occurrence (To)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Description__c</fullName>
        <label>Reason Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Rejection__c</fullName>
        <label>Reason for Rejection</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Description__c</fullName>
        <label>Rejection Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Document_Number__c</fullName>
        <label>Shipment Document Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Type__c</fullName>
        <label>Shipment Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>BFM_Shipment__c</referenceTo>
        <relationshipLabel>Occurrences</relationshipLabel>
        <relationshipName>Occurrences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Process_Description__c</fullName>
        <label>Shipping Process Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Process__c</fullName>
        <label>Shipping Process</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <label>Status Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_URL__c</fullName>
        <label>Test URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Occurrence</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Occurrence_View</fullName>
        <columns>NAME</columns>
        <columns>Occurrence_Number__c</columns>
        <columns>Company_Code__c</columns>
        <columns>Range_of_Extent_of_Occurrence_From__c</columns>
        <columns>Range_of_Extent_of_Occurrence_To__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Occurrence View</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>Occ-{000}</displayFormat>
        <label>BFM Occurrence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Occurrences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>